Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,8 @@ steps:
 
 - script: |
     echo Starting the build
+    echo "PATH is :$path"
+    find / -name "mvn*"
     mvn package
   displayName: 'Build with Maven'
 
